trunk/Archive2/54/52b785a806a5e0/output
main.cpp: In instantiation of 'Logic::Logic(const T&) [with T = char [6]]':
main.cpp:28:16:   required from here
main.cpp:18:52: error: use of deleted function 'safe_bool::safe_bool(T) [with T = const char*]'
     Logic(const T& val): Logic(bool(safe_bool(val))) {}
                                                    ^
main.cpp:10:5: note: declared here
     safe_bool(T) = delete;
     ^
main.cpp: In instantiation of 'Logic::Logic(const T&) [with T = int]':
main.cpp:29:11:   required from here
main.cpp:18:52: error: use of deleted function 'safe_bool::safe_bool(T) [with T = int]'
     Logic(const T& val): Logic(bool(safe_bool(val))) {}
                                                    ^
main.cpp:10:5: note: declared here
     safe_bool(T) = delete;
     ^
